--- a/Prática/styles.css
+++ b/Prática/styles.css
@@ -5,7 +5,7 @@
 }
 
 .card {
-    background-color: antiquewhite;
+    background-color: rgb(187, 53, 53);
     border-radius: 25px;
 }
 
@@ -33,7 +33,7 @@ nav ul {
 
 nav a {
     font-size: 25px;
-    background-color: #b9b9b9;
+    background-color: #e4e4e4;
     border-radius: 10px;
     color: #000000;
     text-decoration: none;
@@ -42,7 +42,8 @@ nav a {
 }
 
 nav a:hover {
-    color: #ff8d8d;
+    color: #d46b6b;
+    text-decoration: none;
 }
 
 
@@ -52,7 +53,7 @@ nav a:hover {
     justify-content: center;
     align-items: flex-start;
     gap: 20px;
-    max-width: 1200px;
+    max-width: 1300px;
     margin: 0 auto;
     padding: 20px;
     background-color: #fff;
@@ -62,7 +63,7 @@ nav a:hover {
 
 .prato {
     background-color: #ffffff;
-    border: 1px solid #ddd;
+    border: 2px solid #ddd;
     border-radius: 8px;
     padding: 20px;
     text-align: center;
@@ -91,7 +92,7 @@ nav a:hover {
 }
 
 .prato p {
-    color: #666;
+    color: #01740f;
     font-size: 27px;
     font-weight: 50px;
     line-height: 1.4;
